--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.fit-image {
+  width: 100%;
+  object-fit: cover;
+  height: 200px;
+  width: 200px;
+}
